# groq-speak

./: .env  .gitignore  README.md  SETUP_INSTRUCTIONS.md  env.example  index.html  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  setup_env.py  supabase_schema.sql  vite.config.ts
backend/: main.py
backend/auth/: __init__.py  middleware.py
frontend/: env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CaptionGenerator.tsx  Dashboard.tsx  DefinitionCard.tsx  DictionaryApp.tsx  JokesGenerator.tsx  Navigation.tsx  SearchForm.tsx  Toggle.tsx
frontend/src/components/auth/: ProtectedRoute.tsx  SignInForm.tsx  SignUpForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib_supa/: supabase.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
src/components/: DefinitionCard.tsx
src/hooks/: useDefine.ts
src/pages/: Index.tsx
src/store/: notifications.ts
src/types/: definition.ts
