[project]
name = "groq-speak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "groq==0.4.1",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.0.3",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests>=2.32.4",
    "uvicorn[standard]==0.24.0",
]
