[project]
name = "dict-app-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "gotrue==2.8.1",
    "groq==0.4.1",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "supabase==2.3.4",
    "uvicorn[standard]==0.24.0",
]
